Check for "ncursesw" package
We need the version with wide-character support now. Also rename the variable to NCURSES for clarity since it is shown to the user when executing ./configure.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,5 +2,5 @@ bin_PROGRAMS = follow
 
 follow_SOURCES = follow.c
 
-follow_CPPFLAGS = $(NC_CFLAGS)
-follow_LDFLAGS= $(NC_LIBS)
+follow_CPPFLAGS = @NCURSES_CFLAGS@
+follow_LDFLAGS= @NCURSES_LIBS@
