Add missing header to follow.c and a command line option to show version information
Also set the URL in configure.ac for use in version information.

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 # Initialize
 AC_PREREQ([2.69])
-AC_INIT([follow], [0.1])
+AC_INIT([follow], [0.1], , , [https://github.com/aemsenhuber/follow])
 AC_CONFIG_AUX_DIR([aux])
 AM_INIT_AUTOMAKE([foreign -Wall -Werror])
 
